--- a/WebSample/App_Plugins/MemberManager/css/memberListView.css
+++ b/WebSample/App_Plugins/MemberManager/css/memberListView.css
@@ -1,12 +1,49 @@
-﻿.umb-listview a { text-decoration: none; }
-.filter-options .filter-checkbox-list .filter-content > div { overflow: auto; }
-.filter-options .filter-checkbox-list .filter-content > div input[type="checkbox"] { float: left; margin-top: 10px; margin-right: 10px; }
-.filter-options .filter-checkbox-list .filter-content > div label { float: left; margin: 0; padding: 0; width: auto; width: 90%; }
-.umb-listview table { border-collapse: separate; margin-top: 20px; }
+﻿.umb-listview.membermanager a {
+  text-decoration: none; }
 
-.filter-display { padding: 20px; background-color: #f8f8f8; border: 1px solid #dbdbdb;  }
-.filter-display > div { overflow: auto; margin-bottom: 5px; }
-.filter-display > div:last-child { margin-bottom: 0; }
-.filter-display > div strong { float: left; width: 180px; display: block; }
-.filter-display > div span { float: left; width: auto; }
-.no-results { padding: 20px; background-color: #f8f8f8; border: 1px solid #dbdbdb; text-align: center; color: #999; margin-top: 20px; }
+.umb-listview.membermanager .umb-table__name {
+  -ms-flex: 1 1 5%;
+  flex: 1 1 5%;
+  max-width: 20%; }
+
+.umb-listview.membermanager .filter-display {
+  padding: 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #dbdbdb;
+  margin-bottom: 1em; }
+  .umb-listview.membermanager .filter-display > div {
+    overflow: auto;
+    margin-bottom: 5px; }
+    .umb-listview.membermanager .filter-display > div:last-child {
+      margin-bottom: 0; }
+    .umb-listview.membermanager .filter-display > div strong {
+      float: left;
+      width: 180px;
+      display: block; }
+    .umb-listview.membermanager .filter-display > div span {
+      float: left;
+      width: auto; }
+
+.umb-listview.membermanager .no-results {
+  padding: 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #dbdbdb;
+  text-align: center;
+  color: #999;
+  margin-top: 20px; }
+
+.filter-options .filter-checkbox-list {
+  margin-bottom: 1em; }
+  .filter-options .filter-checkbox-list .filter-content > div {
+    overflow: auto; }
+    .filter-options .filter-checkbox-list .filter-content > div input[type="checkbox"] {
+      float: left;
+      /*margin-top: 10px;*/
+      margin-right: 10px; }
+    .filter-options .filter-checkbox-list .filter-content > div label.control-label {
+      float: left;
+      margin: 0;
+      padding: 0;
+      width: auto;
+      width: 90%;
+      font-weight: 400; }
