fixed missing dlls from sample web project related to Excel export

--- a/MemberListView/App_Plugins/MemberListView/scss/memberListView.scss
+++ b/MemberListView/App_Plugins/MemberListView/scss/memberListView.scss
@@ -17,6 +17,11 @@
         color: #999;
         margin-top: 20px;
     }
+
+    .umb-table-cell > * {
+        overflow: visible;
+        white-space: unset;
+    }
 }
 
 .filter-display {
